# meta-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_deep_audit.py  test_env.py  test_hf_space.py  verify_hf_deployment.py  verify_inference_fix.py  verify_namespace.py
agentic_os_env/: graders.py  models.py
hackathon_tests/dummy/server/: __init__.py
jira_agency_env/: agency_env.py  graders.py
mock_repo/: auth.py  database.py  dependencies.py  main.py  models.py
server/: app.py
static/: index.html
test/dummy/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
test/dummy/server/: Dockerfile  app.py  dummy_environment.py
